--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline Pro - Labeling & Filter</title>
+    <title>Timeline Pro - Labels</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -16,10 +16,12 @@
         body { font-family: 'Lexend', sans-serif; background-color: #f8fafc; }
         .sticky-date { position: sticky; top: 130px; z-index: 10; background: rgba(248, 250, 252, 0.9); backdrop-filter: blur(10px); }
         .hide-scrollbar::-webkit-scrollbar { display: none; }
-        .tag-dang { background-color: #fee2e2; color: #dc2626; border: 1px solid #fca5a5; } /* Đỏ */
-        .tag-chuyenmon { background-color: #dbeafe; color: #2563eb; border: 1px solid #93c5fd; } /* Xanh dương */
-        .tag-giadinh { background-color: #fce7f3; color: #db2777; border: 1px solid #f9a8d4; } /* Hồng */
-        .tag-canhan { background-color: #dcfce7; color: #16a34a; border: 1px solid #86efac; } /* Xanh lá */
+        
+        /* Định nghĩa màu nhãn */
+        .tag-dang { background-color: #fee2e2; color: #dc2626; border: 1px solid #fca5a5; }
+        .tag-chuyenmon { background-color: #dbeafe; color: #2563eb; border: 1px solid #93c5fd; }
+        .tag-giadinh { background-color: #fce7f3; color: #db2777; border: 1px solid #f9a8d4; }
+        .tag-canhan { background-color: #dcfce7; color: #16a34a; border: 1px solid #86efac; }
     </style>
 </head>
 <body>
@@ -54,7 +56,7 @@
             const [user, setUser] = useState(null);
             const [notes, setNotes] = useState([]);
             const [text, setText] = useState("");
-            const [selectedLabel, setSelectedLabel] = useState("Cá nhân");
+            const [activeLabel, setActiveLabel] = useState("Cá nhân");
             const [search, setSearch] = useState("");
             const [filterLabel, setFilterLabel] = useState("");
             const [loading, setLoading] = useState(true);
@@ -64,7 +66,7 @@
             }, []);
 
             useEffect(() => {
-                if (!user) { setNotes([]); return; }
+                if (!user) return;
                 const unsubscribe = db.collection("notes")
                     .where("userId", "==", user.uid)
                     .onSnapshot((s) => {
@@ -84,7 +86,7 @@
 
             const groupedNotes = useMemo(() => {
                 return filteredNotes.reduce((groups, note) => {
-                    const d = note.displayDate || "Khác";
+                    const d = note.displayDate || note.date || "Khác";
                     if (!groups[d]) groups[d] = [];
                     groups[d].push(note);
                     return groups;
@@ -95,79 +97,72 @@
                 e.preventDefault();
                 if (!text.trim() || !user) return;
                 const now = new Date();
-                const day = String(now.getDate()).padStart(2, '0');
-                const month = String(now.getMonth() + 1).padStart(2, '0');
-                const year = now.getFullYear();
+                const vnDate = `${String(now.getDate()).padStart(2, '0')}-${String(now.getMonth() + 1).padStart(2, '0')}-${now.getFullYear()}`;
                 
                 await db.collection("notes").add({
                     content: text,
                     userId: user.uid,
-                    label: selectedLabel,
-                    displayDate: `${day}-${month}-${year}`, // Định dạng VN
+                    label: activeLabel,
+                    displayDate: vnDate,
                     time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
                 });
                 setText("");
             };
 
-            if (loading) return <div className="h-screen flex items-center justify-center font-bold text-blue-600">DANG KET NOI...</div>;
+            if (loading) return <div className="h-screen flex items-center justify-center font-bold">ĐANG TẢI...</div>;
 
             if (!user) return (
-                <div className="h-screen flex flex-col items-center justify-center p-6 text-center">
-                    <button onClick={() => auth.signInWithPopup(provider)} className="bg-white border p-5 rounded-3xl shadow-xl flex items-center gap-4 font-bold text-gray-700">
+                <div className="h-screen flex items-center justify-center">
+                    <button onClick={() => auth.signInWithPopup(provider)} className="bg-white border p-6 rounded-3xl shadow-xl flex items-center gap-4 font-bold">
                         <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="24" />
-                        Tiếp tục với Google
+                        Đăng nhập bằng Google
                     </button>
                 </div>
             );
 
             return (
-                <div className="max-w-5xl mx-auto flex flex-col lg:flex-row gap-8 p-4 pb-48">
+                <div className="max-w-6xl mx-auto flex flex-col lg:flex-row gap-8 p-4 pb-48">
                     {/* SIDEBAR */}
-                    <aside className="lg:w-72 w-full lg:sticky lg:top-4 h-fit space-y-6">
+                    <aside className="lg:w-64 w-full lg:sticky lg:top-4 h-fit space-y-4 order-2 lg:order-1">
                         <div className="bg-white p-6 rounded-[2.5rem] shadow-sm border border-gray-100">
-                            <h3 className="text-[10px] font-black text-gray-400 mb-6 tracking-widest uppercase">Lọc theo nhãn</h3>
+                            <h3 className="text-[10px] font-black text-gray-400 mb-6 tracking-widest uppercase">Lọc nội dung</h3>
                             <div className="flex lg:flex-col gap-2 overflow-x-auto hide-scrollbar">
-                                <button onClick={() => setFilterLabel("")} className={`px-4 py-2.5 rounded-2xl text-xs font-bold transition-all whitespace-nowrap ${!filterLabel ? 'bg-gray-800 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>Tất cả</button>
+                                <button onClick={() => setFilterLabel("")} className={`px-4 py-2 rounded-2xl text-xs font-bold transition-all ${!filterLabel ? 'bg-gray-800 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>Tất cả ({notes.length})</button>
                                 {LABELS.map(l => (
-                                    <button key={l.id} onClick={() => setFilterLabel(l.id)} className={`px-4 py-2.5 rounded-2xl text-xs font-bold transition-all whitespace-nowrap ${filterLabel === l.id ? 'bg-blue-600 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>{l.id}</button>
+                                    <button key={l.id} onClick={() => setFilterLabel(l.id)} className={`px-4 py-2 rounded-2xl text-xs font-bold transition-all whitespace-nowrap ${filterLabel === l.id ? 'bg-blue-600 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>
+                                        {l.id} ({notes.filter(n => n.label === l.id).length})
+                                    </button>
                                 ))}
-                            </div>
-                            <div className="mt-6 pt-6 border-t border-gray-50 flex justify-between items-center">
-                                <span className="text-[10px] font-bold text-gray-300 uppercase">Tổng cộng</span>
-                                <span className="text-xl font-black text-gray-800">{notes.length}</span>
                             </div>
                         </div>
                     </aside>
 
-                    {/* MAIN CONTENT */}
-                    <main className="flex-1">
-                        <header className="sticky top-0 bg-white/80 backdrop-blur-lg rounded-[2.5rem] p-4 mb-8 z-30 border border-white shadow-sm space-y-4">
+                    {/* MAIN */}
+                    <main className="flex-1 order-1 lg:order-2">
+                        <header className="sticky top-0 bg-white/80 backdrop-blur-lg rounded-[2.5rem] p-4 mb-6 z-30 border border-gray-100 shadow-sm space-y-4">
                             <div className="flex justify-between items-center px-4">
-                                <div className="flex items-center gap-3">
-                                    <img src={user.photoURL} className="w-8 h-8 rounded-full border shadow-sm" />
-                                    <span className="font-black text-gray-800 tracking-tighter">TIMELINE PRO</span>
-                                </div>
-                                <button onClick={() => auth.signOut()} className="text-[9px] font-black text-red-300 hover:text-red-500 transition-colors uppercase">Đăng xuất</button>
+                                <span className="font-black text-blue-600 tracking-tighter uppercase">Private Timeline</span>
+                                <button onClick={() => auth.signOut()} className="text-[9px] font-bold text-gray-300 uppercase">Đăng xuất</button>
                             </div>
-                            <input type="text" value={search} onChange={(e) => setSearch(e.target.value)} placeholder="Tìm trong ký ức..." className="w-full bg-gray-50 border-none rounded-2xl px-6 py-3.5 text-sm focus:ring-4 focus:ring-blue-50 outline-none transition-all" />
+                            <input type="text" value={search} onChange={(e) => setSearch(e.target.value)} placeholder="Tìm trong nhật ký..." className="w-full bg-gray-50 border-none rounded-2xl px-6 py-3 text-sm focus:ring-2 focus:ring-blue-100 outline-none" />
                         </header>
 
                         <div className="space-y-10">
                             {Object.keys(groupedNotes).map(date => (
                                 <div key={date}>
-                                    <h2 className="sticky-date py-4 text-[11px] font-black text-blue-400/60 uppercase tracking-[0.4em] ml-6">{date}</h2>
+                                    <h2 className="sticky-date py-4 text-[11px] font-black text-gray-400 uppercase tracking-[0.4em] ml-6">{date}</h2>
                                     <div className="space-y-5">
                                         {groupedNotes[date].map(note => (
-                                            <div key={note.id} className="bg-white p-7 rounded-[2.8rem] shadow-[0_8px_30px_rgb(0,0,0,0.02)] border border-white transition-all hover:shadow-xl relative group overflow-hidden">
+                                            <div key={note.id} className="bg-white p-7 rounded-[2.5rem] shadow-sm border border-gray-50 group hover:shadow-md transition-all">
                                                 <div className="flex justify-between items-center mb-4">
-                                                    <div className="flex items-center gap-2">
-                                                        <span className="text-[10px] font-black text-gray-300">{note.time}</span>
-                                                        <span className={`px-3 py-1 rounded-full text-[9px] font-black uppercase tracking-tighter ${LABELS.find(l => l.id === note.label)?.class || 'tag-canhan'}`}>
+                                                    <div className="flex items-center gap-3">
+                                                        <span className="text-[10px] font-bold text-gray-300">{note.time}</span>
+                                                        <span className={`px-3 py-1 rounded-full text-[9px] font-black uppercase ${LABELS.find(l => l.id === note.label)?.class || 'tag-canhan'}`}>
                                                             {note.label || 'Cá nhân'}
                                                         </span>
                                                     </div>
-                                                    <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-gray-200 hover:text-red-500 transition-all">
+                                                    <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-red-200 hover:text-red-500 transition-all">
                                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-4 h-4"><path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
                                                     </button>
                                                 </div>
@@ -180,23 +175,21 @@
                         </div>
                     </main>
 
-                    {/* INPUT AREA */}
-                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-white/95 to-transparent z-40">
+                    {/* INPUT */}
+                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50/95 to-transparent z-40 text-center">
                         <div className="max-w-2xl mx-auto space-y-4">
-                            {/* Label Selector */}
-                            <div className="flex gap-2 px-2 overflow-x-auto hide-scrollbar">
+                            {/* Thanh chọn nhãn trước khi gửi */}
+                            <div className="flex justify-center gap-2 overflow-x-auto hide-scrollbar px-2">
                                 {LABELS.map(l => (
-                                    <button key={l.id} onClick={() => setSelectedLabel(l.id)} className={`flex items-center gap-2 px-4 py-2 rounded-full text-[10px] font-black transition-all border-2 ${selectedLabel === l.id ? 'border-gray-800 bg-gray-800 text-white' : 'border-white bg-white text-gray-400 shadow-sm'}`}>
-                                        <span className={`w-2 h-2 rounded-full ${l.color}`}></span>
+                                    <button key={l.id} onClick={() => setActiveLabel(l.id)} className={`px-4 py-2 rounded-full text-[10px] font-black transition-all border-2 ${activeLabel === l.id ? 'bg-gray-800 border-gray-800 text-white shadow-lg' : 'bg-white border-transparent text-gray-400'}`}>
                                         {l.id}
                                     </button>
                                 ))}
                             </div>
-                            {/* Input Form */}
-                            <form onSubmit={handleSubmit} className="relative flex items-center bg-white shadow-[0_20px_70px_rgba(0,0,0,0.15)] rounded-[2.5rem] p-2 border border-white">
-                                <textarea value={text} onChange={(e) => setText(e.target.value)} onKeyDown={(e) => { if(e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleSubmit(e); } }} placeholder={`Ghi chú mục ${selectedLabel}...`} className="flex-1 p-5 px-6 outline-none border-none resize-none bg-transparent min-h-[60px] max-h-40 text-sm font-light" rows="1" />
-                                <button className={`w-14 h-14 rounded-[1.8rem] flex items-center justify-center text-white shadow-xl transition-all active:scale-90 ${LABELS.find(l => l.id === selectedLabel)?.color || 'bg-blue-600'}`}>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-7 h-7"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
+                            <form onSubmit={handleSubmit} className="flex items-center bg-white shadow-2xl rounded-[2.5rem] p-2 border border-gray-100">
+                                <textarea value={text} onChange={(e) => setText(e.target.value)} onKeyDown={(e) => e.key === 'Enter' && !e.shiftKey && (e.preventDefault(), handleSubmit(e))} placeholder={`Đang viết mục ${activeLabel}...`} className="flex-1 p-4 px-6 outline-none resize-none bg-transparent min-h-[60px] max-h-40 text-sm" rows="1" />
+                                <button className={`w-12 h-12 rounded-[1.5rem] flex items-center justify-center text-white transition-all shadow-lg ${LABELS.find(l => l.id === activeLabel).color}`}>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-6 h-6"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
                                 </button>
                             </form>
                         </div>
