--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline Pro - Labels</title>
+    <title>Timeline Pro - Minimalist</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -12,16 +12,12 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap');
-        body { font-family: 'Lexend', sans-serif; background-color: #f8fafc; }
-        .sticky-date { position: sticky; top: 130px; z-index: 10; background: rgba(248, 250, 252, 0.9); backdrop-filter: blur(10px); }
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap');
+        body { font-family: 'Inter', sans-serif; background-color: #fcfcfd; color: #1a1a1a; }
+        .glass-header { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(20px); }
+        .note-card { transition: transform 0.2s ease, box-shadow 0.2s ease; }
+        .note-card:hover { transform: translateY(-2px); shadow: 0 10px 25px -5px rgba(0,0,0,0.04); }
         .hide-scrollbar::-webkit-scrollbar { display: none; }
-        
-        /* Định nghĩa màu nhãn */
-        .tag-dang { background-color: #fee2e2; color: #dc2626; border: 1px solid #fca5a5; }
-        .tag-chuyenmon { background-color: #dbeafe; color: #2563eb; border: 1px solid #93c5fd; }
-        .tag-giadinh { background-color: #fce7f3; color: #db2777; border: 1px solid #f9a8d4; }
-        .tag-canhan { background-color: #dcfce7; color: #16a34a; border: 1px solid #86efac; }
     </style>
 </head>
 <body>
@@ -41,10 +37,10 @@
         };
 
         const LABELS = [
-            { id: 'Đảng', color: 'bg-red-500', class: 'tag-dang' },
-            { id: 'Chuyên môn', color: 'bg-blue-500', class: 'tag-chuyenmon' },
-            { id: 'Gia đình', color: 'bg-pink-500', class: 'tag-giadinh' },
-            { id: 'Cá nhân', color: 'bg-green-500', class: 'tag-canhan' }
+            { id: 'Đảng', color: 'bg-red-500', text: 'text-red-600', bg: 'bg-red-50' },
+            { id: 'Chuyên môn', color: 'bg-blue-500', text: 'text-blue-600', bg: 'bg-blue-50' },
+            { id: 'Gia đình', color: 'bg-pink-500', text: 'text-pink-600', bg: 'bg-pink-50' },
+            { id: 'Cá nhân', color: 'bg-emerald-500', text: 'text-emerald-600', bg: 'bg-emerald-50' }
         ];
 
         if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
@@ -86,7 +82,7 @@
 
             const groupedNotes = useMemo(() => {
                 return filteredNotes.reduce((groups, note) => {
-                    const d = note.displayDate || note.date || "Khác";
+                    const d = note.displayDate || "Khác";
                     if (!groups[d]) groups[d] = [];
                     groups[d].push(note);
                     return groups;
@@ -98,97 +94,116 @@
                 if (!text.trim() || !user) return;
                 const now = new Date();
                 const vnDate = `${String(now.getDate()).padStart(2, '0')}-${String(now.getMonth() + 1).padStart(2, '0')}-${now.getFullYear()}`;
-                
                 await db.collection("notes").add({
-                    content: text,
-                    userId: user.uid,
-                    label: activeLabel,
-                    displayDate: vnDate,
+                    content: text, userId: user.uid, label: activeLabel, displayDate: vnDate,
                     time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
                 });
                 setText("");
             };
 
-            if (loading) return <div className="h-screen flex items-center justify-center font-bold">ĐANG TẢI...</div>;
+            if (loading) return <div className="h-screen flex items-center justify-center font-medium text-gray-400">Loading...</div>;
 
             if (!user) return (
-                <div className="h-screen flex items-center justify-center">
-                    <button onClick={() => auth.signInWithPopup(provider)} className="bg-white border p-6 rounded-3xl shadow-xl flex items-center gap-4 font-bold">
-                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="24" />
-                        Đăng nhập bằng Google
+                <div className="h-screen flex items-center justify-center bg-white p-6">
+                    <button onClick={() => auth.signInWithPopup(provider)} className="flex items-center gap-3 px-8 py-4 bg-black text-white rounded-2xl font-semibold hover:opacity-80 transition-all shadow-xl">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" className="w-5 h-5 bg-white rounded-full p-0.5" />
+                        Sign in with Google
                     </button>
                 </div>
             );
 
             return (
-                <div className="max-w-6xl mx-auto flex flex-col lg:flex-row gap-8 p-4 pb-48">
-                    {/* SIDEBAR */}
-                    <aside className="lg:w-64 w-full lg:sticky lg:top-4 h-fit space-y-4 order-2 lg:order-1">
-                        <div className="bg-white p-6 rounded-[2.5rem] shadow-sm border border-gray-100">
-                            <h3 className="text-[10px] font-black text-gray-400 mb-6 tracking-widest uppercase">Lọc nội dung</h3>
-                            <div className="flex lg:flex-col gap-2 overflow-x-auto hide-scrollbar">
-                                <button onClick={() => setFilterLabel("")} className={`px-4 py-2 rounded-2xl text-xs font-bold transition-all ${!filterLabel ? 'bg-gray-800 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>Tất cả ({notes.length})</button>
-                                {LABELS.map(l => (
-                                    <button key={l.id} onClick={() => setFilterLabel(l.id)} className={`px-4 py-2 rounded-2xl text-xs font-bold transition-all whitespace-nowrap ${filterLabel === l.id ? 'bg-blue-600 text-white shadow-lg' : 'bg-gray-50 text-gray-400'}`}>
-                                        {l.id} ({notes.filter(n => n.label === l.id).length})
-                                    </button>
-                                ))}
+                <div className="max-w-5xl mx-auto flex flex-col lg:flex-row min-h-screen">
+                    {/* LEFT NAV - CLEANER SIDEBAR */}
+                    <aside className="lg:w-64 w-full p-6 lg:fixed h-fit space-y-8 z-20">
+                        <div className="flex items-center gap-3 mb-10">
+                            <img src={user.photoURL} className="w-10 h-10 rounded-full shadow-sm" />
+                            <div className="flex flex-col">
+                                <span className="font-extrabold text-lg tracking-tight">Timeline</span>
+                                <button onClick={() => auth.signOut()} className="text-[10px] text-gray-400 text-left hover:text-red-500 font-bold uppercase tracking-widest">Logout</button>
                             </div>
+                        </div>
+
+                        <div className="space-y-1">
+                            <p className="text-[10px] font-bold text-gray-300 uppercase tracking-widest mb-4 px-2">Phân loại</p>
+                            <button onClick={() => setFilterLabel("")} className={`w-full text-left px-4 py-3 rounded-xl text-sm font-semibold transition-all ${!filterLabel ? 'bg-black text-white shadow-lg' : 'text-gray-500 hover:bg-gray-100'}`}>Tất cả ({notes.length})</button>
+                            {LABELS.map(l => (
+                                <button key={l.id} onClick={() => setFilterLabel(l.id)} className={`w-full text-left px-4 py-3 rounded-xl text-sm font-semibold transition-all ${filterLabel === l.id ? 'bg-blue-600 text-white shadow-lg' : 'text-gray-500 hover:bg-gray-100'}`}>
+                                    {l.id}
+                                </button>
+                            ))}
                         </div>
                     </aside>
 
-                    {/* MAIN */}
-                    <main className="flex-1 order-1 lg:order-2">
-                        <header className="sticky top-0 bg-white/80 backdrop-blur-lg rounded-[2.5rem] p-4 mb-6 z-30 border border-gray-100 shadow-sm space-y-4">
-                            <div className="flex justify-between items-center px-4">
-                                <span className="font-black text-blue-600 tracking-tighter uppercase">Private Timeline</span>
-                                <button onClick={() => auth.signOut()} className="text-[9px] font-bold text-gray-300 uppercase">Đăng xuất</button>
+                    {/* MAIN FEED */}
+                    <main className="flex-1 lg:ml-64 p-4 lg:p-8 pb-48">
+                        <div className="max-w-2xl mx-auto space-y-12">
+                            {/* SEARCH BAR */}
+                            <div className="glass-header sticky top-4 p-2 rounded-[2rem] shadow-sm border border-gray-100 z-30">
+                                <input 
+                                    type="text" value={search} onChange={(e) => setSearch(e.target.value)}
+                                    placeholder="Tìm kiếm nội dung..." 
+                                    className="w-full bg-transparent px-6 py-3 outline-none text-[16px] font-medium placeholder:text-gray-300"
+                                />
                             </div>
-                            <input type="text" value={search} onChange={(e) => setSearch(e.target.value)} placeholder="Tìm trong nhật ký..." className="w-full bg-gray-50 border-none rounded-2xl px-6 py-3 text-sm focus:ring-2 focus:ring-blue-100 outline-none" />
-                        </header>
 
-                        <div className="space-y-10">
-                            {Object.keys(groupedNotes).map(date => (
-                                <div key={date}>
-                                    <h2 className="sticky-date py-4 text-[11px] font-black text-gray-400 uppercase tracking-[0.4em] ml-6">{date}</h2>
-                                    <div className="space-y-5">
-                                        {groupedNotes[date].map(note => (
-                                            <div key={note.id} className="bg-white p-7 rounded-[2.5rem] shadow-sm border border-gray-50 group hover:shadow-md transition-all">
-                                                <div className="flex justify-between items-center mb-4">
-                                                    <div className="flex items-center gap-3">
-                                                        <span className="text-[10px] font-bold text-gray-300">{note.time}</span>
-                                                        <span className={`px-3 py-1 rounded-full text-[9px] font-black uppercase ${LABELS.find(l => l.id === note.label)?.class || 'tag-canhan'}`}>
-                                                            {note.label || 'Cá nhân'}
-                                                        </span>
+                            {/* TIMELINE LIST */}
+                            <div className="space-y-16">
+                                {Object.keys(groupedNotes).map(date => (
+                                    <div key={date} className="relative">
+                                        <div className="sticky top-24 z-10 py-2 mb-6">
+                                            <span className="text-[12px] font-extrabold text-gray-900 bg-gray-100 px-4 py-2 rounded-full shadow-sm">{date}</span>
+                                        </div>
+                                        <div className="space-y-6">
+                                            {groupedNotes[date].map(note => {
+                                                const labelInfo = LABELS.find(l => l.id === note.label) || LABELS[3];
+                                                return (
+                                                    <div key={note.id} className="note-card bg-white p-8 rounded-[2.5rem] shadow-[0_4px_20px_rgba(0,0,0,0.02)] border border-gray-50 group relative">
+                                                        <div className="flex justify-between items-center mb-6">
+                                                            <div className="flex items-center gap-3">
+                                                                <span className="text-[11px] font-bold text-gray-300 uppercase">{note.time}</span>
+                                                                <span className={`px-3 py-1 rounded-full text-[10px] font-extrabold uppercase tracking-tight ${labelInfo.bg} ${labelInfo.text}`}>
+                                                                    {note.label || 'Cá nhân'}
+                                                                </span>
+                                                            </div>
+                                                            <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-gray-200 hover:text-red-500 transition-all p-2 rounded-full hover:bg-red-50">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-4 h-4"><path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
+                                                            </button>
+                                                        </div>
+                                                        <p className="text-[17px] leading-[1.6] text-gray-800 font-normal whitespace-pre-wrap">{note.content}</p>
                                                     </div>
-                                                    <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-red-200 hover:text-red-500 transition-all">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-4 h-4"><path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
-                                                    </button>
-                                                </div>
-                                                <p className="text-gray-700 leading-relaxed whitespace-pre-wrap font-light text-[15.5px]">{note.content}</p>
-                                            </div>
-                                        ))}
+                                                )
+                                            })}
+                                        </div>
                                     </div>
-                                </div>
-                            ))}
+                                ))}
+                            </div>
                         </div>
                     </main>
 
-                    {/* INPUT */}
-                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50/95 to-transparent z-40 text-center">
-                        <div className="max-w-2xl mx-auto space-y-4">
-                            {/* Thanh chọn nhãn trước khi gửi */}
-                            <div className="flex justify-center gap-2 overflow-x-auto hide-scrollbar px-2">
+                    {/* MINIMAL INPUT AREA */}
+                    <div className="fixed bottom-0 left-0 right-0 p-6 glass-header z-40 border-t border-gray-50">
+                        <div className="max-w-2xl mx-auto flex flex-col gap-4">
+                            <div className="flex gap-2 overflow-x-auto hide-scrollbar justify-center">
                                 {LABELS.map(l => (
-                                    <button key={l.id} onClick={() => setActiveLabel(l.id)} className={`px-4 py-2 rounded-full text-[10px] font-black transition-all border-2 ${activeLabel === l.id ? 'bg-gray-800 border-gray-800 text-white shadow-lg' : 'bg-white border-transparent text-gray-400'}`}>
+                                    <button 
+                                        key={l.id} onClick={() => setActiveLabel(l.id)} 
+                                        className={`px-5 py-2 rounded-full text-[11px] font-bold transition-all border ${activeLabel === l.id ? 'bg-black text-white border-black shadow-lg scale-105' : 'bg-white text-gray-400 border-gray-100 hover:border-gray-300'}`}
+                                    >
                                         {l.id}
                                     </button>
                                 ))}
                             </div>
-                            <form onSubmit={handleSubmit} className="flex items-center bg-white shadow-2xl rounded-[2.5rem] p-2 border border-gray-100">
-                                <textarea value={text} onChange={(e) => setText(e.target.value)} onKeyDown={(e) => e.key === 'Enter' && !e.shiftKey && (e.preventDefault(), handleSubmit(e))} placeholder={`Đang viết mục ${activeLabel}...`} className="flex-1 p-4 px-6 outline-none resize-none bg-transparent min-h-[60px] max-h-40 text-sm" rows="1" />
-                                <button className={`w-12 h-12 rounded-[1.5rem] flex items-center justify-center text-white transition-all shadow-lg ${LABELS.find(l => l.id === activeLabel).color}`}>
+                            <form onSubmit={handleSubmit} className="relative flex items-center bg-white shadow-[0_15px_50px_rgba(0,0,0,0.1)] rounded-[2rem] p-1.5 border border-gray-100 transition-all focus-within:ring-4 focus-within:ring-blue-50">
+                                <textarea 
+                                    value={text} onChange={(e) => setText(e.target.value)} 
+                                    onKeyDown={(e) => e.key === 'Enter' && !e.shiftKey && (e.preventDefault(), handleSubmit(e))}
+                                    placeholder={`Viết ghi chú ${activeLabel}...`} 
+                                    className="flex-1 p-5 px-6 outline-none resize-none bg-transparent text-[16px] max-h-40" 
+                                    rows="1" 
+                                />
+                                <button className={`w-14 h-14 rounded-full flex items-center justify-center text-white transition-all shadow-lg active:scale-95 ${LABELS.find(l => l.id === activeLabel).color}`}>
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-6 h-6"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
                                 </button>
                             </form>
